# python-todo-comments

./: .gitignore  .pre-commit-hooks.yaml  README.md  README.rst  pyproject.toml  tox.ini
python_todo_comments/: main.py
tests/: test_python_todo_comments.py
