[tool.poetry]
name = "python-todo-comments"
version = "0.2.0"
description = ""
authors = ["Tylor Dodge <tdodge@nexamp.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
py-todos = "python_todo_comments.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
