[tool.poetry]
name = "python-todo-comments"
version = "0.3.0"
description = "A cli that will search for and parse TODO comments in a directory's python modules."
authors = ["Tylor Dodge <tdodge@nexamp.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dodget/python-todo-comments"
homepage = "https://github.com/dodget/python-todo-comments"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.25.0"

[tool.poetry.scripts]
py-todos = "python_todo_comments.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
